Adjusted file structure and began documentation of existing code